--- a/css/main.scss
+++ b/css/main.scss
@@ -51,3 +51,27 @@ $on-laptop:        800px;
         "layout",
         "syntax-highlighting"
 ;
+
+ul {
+	list-style: none;
+}
+
+.sidebar {
+	position: absolute;
+	left: 0px;
+	top: 0px;
+	height: 100%;
+	width: 300px;
+	margin-left: 0px;
+	padding-top: 100px;
+	
+	.post-link {
+		color: #333;
+		font-size: 14px;
+		padding: 15px 30px;
+
+		&.level1{
+			font-weight: bold;
+		}
+	}
+}
